--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.4.4", features = ["std", "derive"] }
 indicatif = "0.17.7"
 trust-dns-resolver = "0.23.0"
 tabled = "0.14.0"
