--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ description = "Determine the fastest DNS for yourself using simple command line 
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/qwerty541/dns-bench"
 homepage = "https://github.com/qwerty541/dns-bench"
+readme = "README.md"
 
 [dependencies]
 clap = { version = "4.4.6", features = ["std", "derive"] }
