--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/qwerty541/dns-bench"
 homepage = "https://github.com/qwerty541/dns-bench"
 readme = "README.md"
+rust-version = "1.70.0"
 
 [dependencies]
 clap = { version = "4.4.6", features = ["std", "derive"] }
