--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.1"
 edition = "2021"
 authors = ["Alexandr Garbuzov <qwerty541zxc@gmail.com>"]
 description = "Determine the fastest DNS for yourself using simple command line tool."
-keywords = ["dns", "dns-benchmark", "cli", "benchmark", "rust"]
+keywords = ["dns", "network", "cli", "benchmark", "rust"]
 categories = ["network-programming", "command-line-utilities"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/qwerty541/dns-bench"
