--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -19,7 +19,7 @@ jobs:
               uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
             - name: Install rust (stable)
-              uses: dtolnay/rust-toolchain@stable
+              uses: dtolnay/rust-toolchain@d76c2a93c593483c9892fd8d2538734f73ed8588
               with:
                   components: clippy, rustfmt
 
@@ -72,7 +72,7 @@ jobs:
               uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
             - name: Install rust (stable)
-              uses: dtolnay/rust-toolchain@stable
+              uses: dtolnay/rust-toolchain@d76c2a93c593483c9892fd8d2538734f73ed8588
 
             - name: Cache
               uses: actions/cache@v3
