--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -42,7 +42,7 @@ jobs:
               uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
             - name: Install rust (${{ matrix.rust }})
-              uses: dtolnay/rust-toolchain@master
+              uses: dtolnay/rust-toolchain@d76c2a93c593483c9892fd8d2538734f73ed8588
               with:
                   toolchain: ${{ matrix.rust }}
 
