--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,6 @@ exclude = [".github", ".vscode", ".gitignore"]
 [dependencies]
 clap = { version = "4.4.11", features = ["std", "derive"] }
 indicatif = "0.17.7"
-trust-dns-resolver = "0.23.2"
+hickory-resolver = "0.24.0"
 tabled = "0.14.0"
 lazy_static = "1.4.0"
