ci: boost msrv job performance 4.x times by caching target folder and Cargo.lock

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -80,7 +80,10 @@ jobs:
             - name: Cache
               uses: actions/cache@13aacd865c20de90d75de3b17ebe84f7a17d57d2 # v4.0.0
               with:
-                  path: ~/.cargo
+                  path: |
+                      ~/.cargo
+                      target
+                      Cargo.lock
                   key: ${{ runner.os }}-msrv
 
             - name: Install cargo-msrv
