--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -85,8 +85,9 @@ jobs:
             - name: Perform test application run (IPv4)
               run: cargo run -- --name-servers-ip v4 --lookup-ip v4
 
-            - name: Perform test application run (IPv6)
-              run: cargo run -- --name-servers-ip v6 --lookup-ip v6
+            # Disabled due to GitHub Actions not supporting IPv6 yet.
+            # - name: Perform test application run (IPv6)
+            #   run: cargo run -- --name-servers-ip v6 --lookup-ip v6
 
     msrv:
         name: Check minimal supported rust version (MSRV).
