--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -83,11 +83,11 @@ jobs:
               run: cargo test
 
             - name: Perform test application run (IPv4)
-              run: cargo run -- --name-servers-ip v4 --lookup-ip v4
+              run: cargo run -- --name-servers-ip v4 --lookup-ip v4 --timeout 1
 
             # Disabled due to GitHub Actions not supporting IPv6 yet.
             # - name: Perform test application run (IPv6)
-            #   run: cargo run -- --name-servers-ip v6 --lookup-ip v6
+            #   run: cargo run -- --name-servers-ip v6 --lookup-ip v6 --timeout 1
 
     msrv:
         name: Check minimal supported rust version (MSRV).
