chore: replace exclude property with include inside Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,14 @@ repository = "https://github.com/qwerty541/dns-bench"
 homepage = "https://github.com/qwerty541/dns-bench"
 readme = "README.md"
 rust-version = "1.74.1"
-exclude = [
-    ".github",
-    ".vscode",
-    ".gitignore",
-    "CODE_OF_CONDUCT.md",
-    "RELEASE-CHECKLIST.md"
+include = [
+    "src/**/*",
+    "Cargo.*",
+    "README.md",
+    "LICENSE-*",
+    "CHANGELOG.md",
+    "example.gif",
+    "README.md"
 ]
 
 [dependencies]
