--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "dns-bench"
 version = "0.4.0"
 edition = "2021"
 authors = ["Alexandr Garbuzov <qwerty541zxc@gmail.com>"]
-description = "Find the fastest DNS in your location using simple command line tool."
+description = "Find the fastest DNS in your location to improve internet browsing experience."
 keywords = ["dns", "network", "cli", "benchmark", "rust"]
 categories = ["network-programming", "command-line-utilities"]
 license = "MIT OR Apache-2.0"
