--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -117,4 +117,4 @@ jobs:
               run: cargo install cargo-msrv
 
             - name: Check msrv
-              run: cargo msrv find --log-target stdout --log-level info
+              run: cargo msrv find
