--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ include = [
 
 [dependencies]
 clap = { version = "4.5.35", features = ["std", "derive"] }
+csv = "1.3.1"
 directories = "5.0.1"
 hickory-resolver = "0.24.4"
 indicatif = "0.17.11"
