chore: set check command for rust-analyzer in vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "files.insertFinalNewline": true,
     "[rust]": {
         "editor.defaultFormatter": "rust-lang.rust-analyzer"
-    }
+    },
+    "rust-analyzer.checkOnSave.command": "clippy"
 }
