--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,6 +19,7 @@
                 "rust-lang.rust-analyzer",
                 "yzhang.markdown-all-in-one",
                 "esbenp.prettier-vscode",
+                "github.vscode-github-actions",
                 "github.copilot",
                 "github.copilot-chat",
                 "wakatime.vscode-wakatime"
