chore: configure dependabot to maintain devcontainers

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -29,3 +29,13 @@ updates:
       commit-message:
           prefix: "build(deps)"
           prefix-development: "build(deps-dev)"
+
+    # Maintain dependencies for Devcontainers
+    - package-ecosystem: devcontainers
+      directory: "/.devcontainer/"
+      schedule:
+          interval: weekly
+      open-pull-requests-limit: 10
+      commit-message:
+          prefix: "build(deps)"
+          prefix-development: "build(deps-dev)"
