fix: dependabot devcontainer directory path

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -32,7 +32,7 @@ updates:
 
   # Maintain dependencies for Devcontainers
   - package-ecosystem: devcontainers
-    directory: "/.devcontainer/"
+    directory: "/"
     schedule:
       interval: weekly
     open-pull-requests-limit: 10
