--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
             "version": "latest",
             "dockerDashComposeVersion": "latest"
         },
-        "ghcr.io/devcontainers/features/rust:1": { "version": "1.88.0" },
+        "ghcr.io/devcontainers/features/rust:1": { "version": "latest" },
         "ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
             "packages": "mingw-w64"
         }
