--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,7 +38,7 @@ jobs:
         with:
           context: .
           file: ./docker/Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/386,linux/s390x,linux/ppc64le
+          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7,linux/386,linux/s390x,linux/ppc64le
           push: true
           tags: |
             ${{ vars.DOCKER_USERNAME }}/dns-bench:0.11.0
@@ -49,10 +49,10 @@ jobs:
         run: |
           docker pull --platform linux/amd64 ${{ vars.DOCKER_USERNAME }}/dns-bench:latest
           docker run --rm --platform linux/amd64 ${{ vars.DOCKER_USERNAME }}/dns-bench:latest /bin/bash -c "dns-bench --timeout 1"
-      - name: Test image on linux/arm64
+      - name: Test image on linux/arm64/v8
         run: |
-          docker pull --platform linux/arm64 ${{ vars.DOCKER_USERNAME }}/dns-bench:latest
-          docker run --rm --platform linux/arm64 ${{ vars.DOCKER_USERNAME }}/dns-bench:latest /bin/bash -c "dns-bench --timeout 1"
+          docker pull --platform linux/arm64/v8 ${{ vars.DOCKER_USERNAME }}/dns-bench:latest
+          docker run --rm --platform linux/arm64/v8 ${{ vars.DOCKER_USERNAME }}/dns-bench:latest /bin/bash -c "dns-bench --timeout 1"
       - name: Test image on linux/arm/v7
         run: |
           docker pull --platform linux/arm/v7 ${{ vars.DOCKER_USERNAME }}/dns-bench:latest
