feat: gateway address autodetection

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,4 +17,4 @@ FROM alpine:3.22.1
 COPY --from=build /usr/local/cargo/bin/dns-bench /usr/bin/dns-bench
 
 # Set the default command
-CMD ["dns-bench", "--skip-system-servers"]
+CMD ["dns-bench", "--skip-system-servers", "--skip-gateway-detection"]
