chore: remove duplicate README.md entry from Cargo.toml file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,7 @@ include = [
     "Cargo.*",
     "README.md",
     "LICENSE-*",
-    "CHANGELOG.md",
-    "README.md"
+    "CHANGELOG.md"
 ]
 
 [dependencies]
