--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "dns-bench"
-version = "0.12.0"
+version = "0.13.0"
 edition = "2021"
 authors = ["Alexandr Garbuzov <qwerty541zxc@gmail.com>"]
 description = "Find the fastest DNS in your location to improve internet browsing experience."
@@ -19,7 +19,7 @@ csv = "1.4.0"
 derive_more = { version = "2.0.1", features = [
     "error",
     "from",
-    "is_variant"
+    "is_variant",
 ], default-features = false }
 directories = "6.0.0"
 hickory-resolver = "0.24.4"
