ci: add security document path into labeler config

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -23,6 +23,7 @@ documentation:
           - CHANGELOG.md
           - CODE_OF_CONDUCT.md
           - docker/OVERVIEW.md
+          - SECURITY.md‎
 
 github_actions:
   - changed-files:
