ci: docker workflow set build mount path to /var/lib/docker/

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           root-reserve-mb: 512
           swap-size-mb: 1024
+          overprovision-lvm: "true"
+          build-mount-path: "/var/lib/docker/"
           remove-dotnet: "true"
           remove-android: "true"
           remove-haskell: "true"
