ci: add contributing document path into labeler config

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -24,6 +24,7 @@ documentation:
           - CODE_OF_CONDUCT.md
           - docker/OVERVIEW.md
           - SECURITY.md‎
+          - CONTRIBUTING.md
 
 github_actions:
   - changed-files:
